# niobium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  config.toml  docker_entrypoint.sh  gunicorn.conf.py  niobium.config  niobium.config.sample  niobium.py  niobium_collections.config.sample  schema.sql  shashin.py
.github/workflows/: ci.yml
src/: collection.rs  config.rs  db.rs  main.rs  nav_data.rs  password.rs  photo.rs  photos.rs  uid.rs
static/css/: main.css
static/js/: cash.min.js  main.js
templates/: 404.html  404.html.tera  grid-item.html  grid-item.html.tera  grid.html  grid.html.tera  layout.html  layout.html.tera  main.html  main.html.tera  nav.html  nav.html.tera
utils/: niobium.service
