[package]
name = "niobium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio-stream = { version = "0.1.11", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
itertools = "0.10.5"
image = "0.24.5"
kamadak-exif = "0.5.5"
md-5 = "0.10.5"
rand = "0.8.4"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]