[package]
name = "niobium"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
tokio-stream = { version = "0.1.11", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
itertools = "0.13.0"
image = "0.25.2"
webp = "0.3.0"
kamadak-exif = "0.5.5"
md-5 = "0.10.5"
rand = "0.8.4"
base64 = "0.22.0"
natord = "1.0.9"
regex = "1.8.4"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
